lang.behavior: direct use of impl methods
shorten stacktrace to get right to impl method instead of jumpting through API methods, double-checking arguments and assumptions.